// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to disable lazy-render prop 1`] = `
<div class="r-tabs__content">
  <div id="r-tab"
       role="tabpanel"
       class="r-tab__panel"
       tabindex="-1"
       aria-labelledby="r-tabs-0"
       style="display: none;"
  >
  </div>
  <div id="r-tab"
       role="tabpanel"
       class="r-tab__panel"
       tabindex="-1"
       aria-labelledby="r-tabs-1"
       style="display: none;"
  >
  </div>
</div>
`;

exports[`should allow to disable lazy-render prop 2`] = `
<div class="r-tabs__content">
  <div id="r-tab"
       role="tabpanel"
       class="r-tab__panel"
       tabindex="0"
       aria-labelledby="r-tabs-0"
       style
  >
    Text
  </div>
  <div id="r-tab"
       role="tabpanel"
       class="r-tab__panel"
       tabindex="-1"
       aria-labelledby="r-tabs-1"
       style="display: none;"
  >
    Text
  </div>
</div>
`;

exports[`should allow to set name prop 1`] = `
<div class="r-tabs r-tabs--line">
  <div class="r-tabs__wrap">
    <div role="tablist"
         class="r-tabs__nav r-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="r-tabs-0"
           role="tab"
           class="r-tab r-tab--line r-tab--active"
           tabindex="0"
           aria-selected="true"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div id="r-tabs-1"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div id="r-tabs-2"
           role="tab"
           class="r-tab r-tab--line r-tab--disabled"
           aria-selected="false"
           aria-disabled="true"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="r-tabs__line"
           style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="r-tabs__content">
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="0"
         aria-labelledby="r-tabs-0"
         style
    >
      Text
    </div>
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="-1"
         aria-labelledby="r-tabs-1"
         style="display: none;"
    >
    </div>
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="-1"
         aria-labelledby="r-tabs-2"
         style="display: none;"
    >
    </div>
  </div>
</div>
`;

exports[`should emit rendered event after tab is rendered 1`] = `
<div id="r-tab"
     role="tabpanel"
     class="r-tab__panel"
     tabindex="0"
     aria-labelledby="r-tabs-0"
     style
>
  Text
</div>
`;

exports[`should not render empty tab 1`] = `
<div class="r-tabs__content">
</div>
`;

exports[`should render badge prop correctly 1`] = `
<div id="r-tabs-0"
     role="tab"
     class="r-tab r-tab--line r-tab--active"
     tabindex="0"
     aria-selected="true"
     aria-controls="r-tab"
>
  <div class="r-badge__wrapper">
    <span class="r-tab__text r-tab__text--ellipsis">
    </span>
    <div class="r-badge r-badge--top-right r-badge--danger r-badge--fixed">
      10
    </div>
  </div>
</div>
`;

exports[`should render nav-left、nav-right slot correctly 1`] = `
<div class="r-tabs__wrap">
  <div role="tablist"
       class="r-tabs__nav r-tabs__nav--line"
       aria-orientation="horizontal"
  >
    Custom nav left
    <div id="r-tabs-0"
         role="tab"
         class="r-tab r-tab--line r-tab--active"
         tabindex="0"
         aria-selected="true"
         aria-controls="r-tab"
    >
      <span class="r-tab__text r-tab__text--ellipsis">
        Title
      </span>
    </div>
    <div class="r-tabs__line"
         style="transform: translateX(50px) translateX(-50%);"
    >
    </div>
    Custom nav right
  </div>
</div>
`;

exports[`should switch tab after click the tab title 1`] = `
<div class="r-tabs r-tabs--line">
  <div class="r-tabs__wrap">
    <div role="tablist"
         class="r-tabs__nav r-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="r-tabs-0"
           role="tab"
           class="r-tab r-tab--line r-tab--active"
           tabindex="0"
           aria-selected="true"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div id="r-tabs-1"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div id="r-tabs-2"
           role="tab"
           class="r-tab r-tab--line r-tab--disabled"
           aria-selected="false"
           aria-disabled="true"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="r-tabs__line"
           style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="r-tabs__content">
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="0"
         aria-labelledby="r-tabs-0"
         style
    >
      Text
    </div>
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="-1"
         aria-labelledby="r-tabs-1"
         style="display: none;"
    >
    </div>
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="-1"
         aria-labelledby="r-tabs-2"
         style="display: none;"
    >
    </div>
  </div>
</div>
`;

exports[`should switch tab after click the tab title 2`] = `
<div class="r-tabs r-tabs--line">
  <div class="r-tabs__wrap">
    <div role="tablist"
         class="r-tabs__nav r-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="r-tabs-0"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div id="r-tabs-1"
           role="tab"
           class="r-tab r-tab--line r-tab--active"
           tabindex="0"
           aria-selected="true"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div id="r-tabs-2"
           role="tab"
           class="r-tab r-tab--line r-tab--disabled"
           aria-selected="false"
           aria-disabled="true"
           aria-controls="r-tab"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="r-tabs__line"
           style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="r-tabs__content">
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="-1"
         aria-labelledby="r-tabs-0"
         style="display: none;"
    >
      Text
    </div>
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="0"
         aria-labelledby="r-tabs-1"
         style
    >
      Text
    </div>
    <div id="r-tab"
         role="tabpanel"
         class="r-tab__panel"
         tabindex="-1"
         aria-labelledby="r-tabs-2"
         style="display: none;"
    >
    </div>
  </div>
</div>
`;

exports[`swipe switch tab after swiping tab content 1`] = `
<div class="r-tabs r-tabs--line">
  <div class="r-tabs__wrap">
    <div role="tablist"
         class="r-tabs__nav r-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="r-tabs-0"
           role="tab"
           class="r-tab r-tab--line r-tab--active"
           tabindex="0"
           aria-selected="true"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div id="r-tabs-1"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div id="r-tabs-2"
           role="tab"
           class="r-tab r-tab--line r-tab--disabled"
           aria-selected="false"
           aria-disabled="true"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="r-tabs__line"
           style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="r-tabs__content r-tabs__content--animated">
    <div class="r-swipe r-tabs__track">
      <div style="transition-duration: 0ms; transform: translateX(0px); width: 300px;"
           class="r-swipe__track"
      >
        <div class="r-swipe-item r-tab__panel-wrapper"
             id="r-tab"
             role="tabpanel"
             tabindex="0"
             aria-hidden="false"
             aria-labelledby="r-tabs-0"
             style="width: 100px;"
        >
          <div class="r-tab__panel">
            Text
          </div>
        </div>
        <div class="r-swipe-item r-tab__panel-wrapper r-tab__panel-wrapper--inactive"
             id="r-tab"
             role="tabpanel"
             tabindex="-1"
             aria-hidden="true"
             aria-labelledby="r-tabs-1"
             style="width: 100px;"
        >
          <div class="r-tab__panel">
            Text
          </div>
        </div>
        <div class="r-swipe-item r-tab__panel-wrapper r-tab__panel-wrapper--inactive"
             id="r-tab"
             role="tabpanel"
             tabindex="-1"
             aria-hidden="true"
             aria-labelledby="r-tabs-2"
             style="width: 100px;"
        >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`swipe switch tab after swiping tab content 2`] = `
<div class="r-tabs r-tabs--line">
  <div class="r-tabs__wrap">
    <div role="tablist"
         class="r-tabs__nav r-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="r-tabs-0"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div id="r-tabs-1"
           role="tab"
           class="r-tab r-tab--line r-tab--active"
           tabindex="0"
           aria-selected="true"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div id="r-tabs-2"
           role="tab"
           class="r-tab r-tab--line r-tab--disabled"
           aria-selected="false"
           aria-disabled="true"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="r-tabs__line"
           style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="r-tabs__content r-tabs__content--animated">
    <div class="r-swipe r-tabs__track">
      <div style="transition-duration: 300ms; transform: translateX(-100px); width: 300px;"
           class="r-swipe__track"
      >
        <div class="r-swipe-item r-tab__panel-wrapper"
             id="r-tab"
             role="tabpanel"
             tabindex="-1"
             aria-hidden="true"
             aria-labelledby="r-tabs-0"
             style="width: 100px;"
        >
          <div class="r-tab__panel">
            Text
          </div>
        </div>
        <div class="r-swipe-item r-tab__panel-wrapper"
             id="r-tab"
             role="tabpanel"
             tabindex="0"
             aria-hidden="false"
             aria-labelledby="r-tabs-1"
             style="width: 100px;"
        >
          <div class="r-tab__panel">
            Text
          </div>
        </div>
        <div class="r-swipe-item r-tab__panel-wrapper r-tab__panel-wrapper--inactive"
             id="r-tab"
             role="tabpanel"
             tabindex="-1"
             aria-hidden="true"
             aria-labelledby="r-tabs-2"
             style="width: 100px;"
        >
          <div class="r-tab__panel">
            Text
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`swipe switch tab after swiping tab content 3`] = `
<div class="r-tabs r-tabs--line">
  <div class="r-tabs__wrap">
    <div role="tablist"
         class="r-tabs__nav r-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="r-tabs-0"
           role="tab"
           class="r-tab r-tab--line"
           tabindex="-1"
           aria-selected="false"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div id="r-tabs-1"
           role="tab"
           class="r-tab r-tab--line r-tab--active"
           tabindex="0"
           aria-selected="true"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div id="r-tabs-2"
           role="tab"
           class="r-tab r-tab--line r-tab--disabled"
           aria-selected="false"
           aria-disabled="true"
      >
        <span class="r-tab__text r-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="r-tabs__line"
           style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="r-tabs__content r-tabs__content--animated">
    <div class="r-swipe r-tabs__track">
      <div style="transition-duration: 300ms; transform: translateX(-200px); width: 300px;"
           class="r-swipe__track"
      >
        <div class="r-swipe-item r-tab__panel-wrapper"
             id="r-tab"
             role="tabpanel"
             tabindex="-1"
             aria-hidden="true"
             aria-labelledby="r-tabs-0"
             style="width: 100px;"
        >
          <div class="r-tab__panel">
            Text
          </div>
        </div>
        <div class="r-swipe-item r-tab__panel-wrapper"
             id="r-tab"
             role="tabpanel"
             tabindex="0"
             aria-hidden="false"
             aria-labelledby="r-tabs-1"
             style="width: 100px;"
        >
          <div class="r-tab__panel">
            Text
          </div>
        </div>
        <div class="r-swipe-item r-tab__panel-wrapper r-tab__panel-wrapper--inactive"
             id="r-tab"
             role="tabpanel"
             tabindex="-1"
             aria-hidden="true"
             aria-labelledby="r-tabs-2"
             style="width: 100px;"
        >
          <div class="r-tab__panel">
            Text
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
